@@ -27,6 +27,9 @@ Version 1.7.0-svn:
 
   * User interface:
     * Fix missing faction column when waiting that the host start the game.
+    * Making the game return to the add-on install dialog just before
+      installing one, and with its entry selected.
+
 
 Version 1.6:
   * Graphics:
